updating read method